--- a/HTML/Form_echec.css
+++ b/HTML/Form_echec.css
@@ -10,24 +10,7 @@ fieldset {
     border-radius: 10px;
 }
 
-.conteneur{
-    display: flex;
- }
-
-.gauche{
-    float: left;
-    width:25%
- }
- .milieu{
-    display: inline-block;
-    width:50%
- }
- .droite{
-    float: right;
-    width:25%
- }
- 
-.plateau { 
+.grillePlateau { 
     width: 242px;
     display: grid; 
     grid-template-columns: repeat(8, 30px); 
@@ -35,31 +18,120 @@ fieldset {
     text-align : center;
     border: solid 1px black;
     box-sizing: border-box;
+    background: white;
 }
 
-.plateau div:nth-child(-2n+9),
-.plateau div:nth-child(9) ~ div:nth-child(-2n+16),
-.plateau div:nth-child(17) ~ div:nth-child(-2n+25),
-.plateau div:nth-child(25) ~ div:nth-child(-2n+32),
-.plateau div:nth-child(33) ~ div:nth-child(-2n+41),
-.plateau div:nth-child(41) ~ div:nth-child(-2n+48),
-.plateau div:nth-child(49) ~ div:nth-child(-2n+57),
-.plateau div:nth-child(57) ~ div:nth-child(-2n+64)
+.plateau div:nth-child(-2n+8),
+.plateau div:nth-child(8) ~ div:nth-child(-2n+15),
+.plateau div:nth-child(16) ~ div:nth-child(-2n+24),
+.plateau div:nth-child(24) ~ div:nth-child(-2n+31),
+.plateau div:nth-child(32) ~ div:nth-child(-2n+40),
+.plateau div:nth-child(40) ~ div:nth-child(-2n+47),
+.plateau div:nth-child(48) ~ div:nth-child(-2n+56),
+.plateau div:nth-child(56) ~ div:nth-child(-2n+63)
 {
     background: black;
 }
 
-.grille {
-    grid-template-columns: 30px 250px; 
-    grid-template-rows: 250px 30px;  
-}
+.grillePlateauPrincipale {
+    display: grid;
+    grid-template-columns:  30px 242px; 
+    grid-template-rows: 242px 35px;   
+}  
+.grillePlateauPrincipale div{
+    border: solid 1px black;
+} 
 
-.grille1 {
+.grillePlateau1a8 {  
+    display: grid;
     grid-template-columns: repeat(1, 30px); 
-    grid-template-rows: repeat(8, 30px);  
+    grid-template-rows: repeat(8, 30px);
+    text-align: center;
 }
 
-.grille2 {
+.grillePlateau1a8 div{
+    height: 30px;
+    line-height: 30px;
+}
+
+.grillePlateauAaH {
+    display: grid;
     grid-template-columns: repeat(8, 30px); 
-    grid-template-rows: repeat(1, 30px);  
+    grid-template-rows: repeat(1, 30px); 
+    text-align: center;
+}
+
+.grillgrillePlateauAaHe2 div{
+    height: 30px;
+    line-height: 30px;
+}
+
+
+.conteneur{
+    display: flex;
+ }
+
+.gauche{
+    float: left;
+    width:25%;
+    border: solid 1px black;
+ }
+ .milieu{
+    display: inline-block;
+    width:50%;
+    border: solid 1px black;
+ }
+ .droite{
+    float: right;
+    width:25%;
+    border: solid 1px black;
+ }
+
+
+
+.grille3verti{
+    display:grid;
+    grid-template-columns: 100px;
+    grid-template-rows: 50px 150px 50px;
+}
+
+.grille3verti div{
+    border: solid 1px black;
+}
+
+.grille2lignes{
+    display:grid;
+    grid-template-columns: 1;
+    grid-template-rows: repeat(2,150px);
+}
+
+.grille2lignes div{
+    border: solid 1px black;
+}
+
+.grille5verti{
+    display:grid;
+    grid-template-columns: 1;
+    grid-template-rows: 50px 50px 300px 50px 50px;
+}
+.grille5verti div{
+    border: solid 1px black;
+}
+
+.grille2horiz{
+    display:grid;
+    grid-template-columns: 130px 130px;
+    grid-template-rows: 1;
+}
+.grille2horiz div{
+    border: solid 1px black;
+}
+
+.grille2horizGrand{
+    display:grid;
+    grid-template-columns: 300px 100px;
+    grid-template-rows: 1;
+}
+.grille2horizGrand div{
+    border: solid 1px black;
 }
