--- a/HTML/assets/css/jeu.css
+++ b/HTML/assets/css/jeu.css
@@ -1,18 +1,7 @@
 body{
     background	: rgb(202, 202, 204);
-}
-
-fieldset {
-    width:250pt;
-    margin: 5px auto;
-    border: 2px solid rgb(233, 36, 36);
-    background-color: rgb(46, 134, 146);
-    border-radius: 10px;
-}
-
-.conteneur{
     display: flex;
- }
+}
 
 .gauche{
     float: left;
@@ -29,7 +18,7 @@ fieldset {
 
  .grilleCentral5Verti{
     display:grid;
-    grid-template-rows: 30px 40px 469px 40px 30px;
+    grid-template-rows: 30px 40px auto 40px 30px;
     border: solid 1px black;
 }
  
