--- a/HTML/assets/css/jeu.css
+++ b/HTML/assets/css/jeu.css
@@ -7,22 +7,29 @@ body{
     float: left;
     width:25%;
  }
- .milieu{
-    display: inline-block;
+
+ .grilleCentralePlateauEtBoutons{
     width:50%;
- }
+    display:flex;
+}
+
  .droite{
     float: right;
     width:25%;
  }
 
- .grilleCentral5Verti{
-    display:grid;
-    grid-template-rows: 30px 40px auto 40px 30px;
+ .grilleCentralePlateauEtBoutons .grilleCentral5Verti{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 80%;
     border: solid 1px black;
+    box-sizing: border-box;
 }
  
-.grilleCentraleNomChrono{
+.grilleCentralePlateauEtBoutons .grilleCentral5Verti .grilleCentraleNomChrono{
+    width : 100%;
+    height: 30px;
     display:grid;
     grid-template-columns: 50% 50%;
     border: solid 1px black;
@@ -30,36 +37,51 @@ body{
     background: blue;
 }
 
-.grilleCentralePlateauEtBoutons{
-    display:grid;
-    grid-template-columns: 80% 20%;
+.grilleCentralePlateauEtBoutons .grilleCentral5Verti .piecesCapturees {
+    width : 100%;
+    height: 30px;
+    border: solid 1px black;
+    box-sizing: border-box;
+    background: yellow;
 }
 
 .grillePlateau {
     display: grid;
-    grid-template-columns:  50px 404px; 
-    grid-template-rows: 404px 50px;
+    grid-template-columns:  50px 400px; 
+    grid-template-rows: 400px 50px;
+    margin : 0 auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.grillePlateau1a8 {  
+    grid-row: 1;
+    grid-column: 1;
+    display: grid;
+    grid-template-columns: repeat(1, 50px); 
+    grid-template-rows: repeat(8, 50px);
+    text-align: center;
+}
+.grillePlateau1a8 div{
+    height: 50px;
+    line-height: 50px;
     border: solid 1px black;
+    box-sizing: border-box;
 }
 
-.flexPlateau{
-    display: flex;
-    justify-content: center;  
-    margin : 5px;
-}
-
-.grillePlateauPrincipal { 
-    width: 404px;
-    height: 404px;
+.grillePlateauPrincipal {
     display: grid; 
+    grid-row: 1;
+    grid-column: 2;
     grid-template-columns: repeat(8, 50px); 
     grid-template-rows: repeat(8, 50px);
     text-align : center;
-    border: solid 2px black;
-    box-sizing: border-box; 
 }
 .grillePlateauPrincipal div{
     background: white;
+    
+    border: solid 1px black;
+    box-sizing: border-box;
 }
 .grillePlateauPrincipal div:nth-child(-2n+8),
 .grillePlateauPrincipal div:nth-child(8) ~ div:nth-child(-2n+15),
@@ -70,50 +92,26 @@ body{
 .grillePlateauPrincipal div:nth-child(48) ~ div:nth-child(-2n+56),
 .grillePlateauPrincipal div:nth-child(56) ~ div:nth-child(-2n+63)
 {
-    background: black;
+    background: rgb(71, 71, 71);
 }
 
-.grillePlateau1a8 {  
-    display: grid;
-    grid-template-columns: repeat(1, 50px); 
-    grid-template-rows: repeat(8, 50px);
-    text-align: center;
-    background: green;
-}
-.grillePlateau1a8 div{
-    height: 50px;
-    line-height: 50px;
-    border: solid 1px black;
-}
-/*
 .grillePlateauAaH {
+    grid-row: 2;
+    grid-column: 2;
     display: grid;
     grid-template-columns: repeat(8, 50px); 
-    grid-template-rows: repeat(1, 50px); 
     text-align: center;
 }
 .grillePlateauAaH div{
     height: 50px;
     line-height: 50px;
     border: solid 1px black;
-}*/
-
-.flexPlateauAaH {
-    display: flex;
-    flex-direction: row;
-    justify-content: center; 
-    background: green;
-}
-.flexPlateauAaH div{
-    width: 50px;
-    height: 50px;
-    line-height: 50px;
-    border: solid 1px black;
-    text-align: center;
+    box-sizing: border-box;
 }
 
 .flexAbandonnerNul {
     display: flex;
+    width : auto;
     flex-direction: column;
     justify-content: center;  
 }
@@ -123,7 +121,11 @@ body{
     border: solid 1px black;
 }
 
-.piecesCapturees {
-    border: solid 1px black;
-    background: yellow;
+@media screen and (max-width : 600px){
+    
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
 }
