--- a/HTML/assets/css/accueil.css
+++ b/HTML/assets/css/accueil.css
@@ -16,6 +16,9 @@ body{
  .droite{
     float: right;
     width:25%;
+	text-align: center;
+	border: solid 1px black;
+	box-sizing: border-box;
  }
  
 /* ================ Milieu de page ================ */
@@ -106,16 +109,15 @@ body{
 }
 
 .popup-content{
-	width:100%;
-	height:100%;
+	/* width:100%;
+	height:100%; */
 	padding: 15px 20px 30px 20px;
 }
 
-.popup-content > form > table > thead > tr > td {
+.popup-content > form > table > thead > tr > th {
 	text-align: center;
     width: 100%;
-	box-sizing: border-box;
-}
+} 
 
 .popup-content > form > table > tbody > tr > td {
 	padding: 10px;
