--- a/HTML/assets/css/testcharte.css
+++ b/HTML/assets/css/testcharte.css
@@ -32,3 +32,151 @@ footer {
    text-align: center;
    grid-area: footer;
 }
+
+
+.milieu > div.zoneBouton {
+	display: flex;
+	padding: 20px;
+	justify-content: center;
+    
+}
+
+.milieu > div.zoneBouton > button {
+	box-shadow: 0 0 0 1px black;
+	border: 1px solid #ccc;
+	border-radius: 32px;
+	text-align: center;
+	font-size: 30px;
+	padding: 15px 40px 15px 40px;
+	margin: 15px;
+}
+
+.milieu > div.zoneBouton > button:hover {
+	box-shadow: 0 0 9px #d85000;
+	border: 1px solid #d85000;
+}
+ 
+ /* ================ POP UP ================ */ 
+ 
+ .popup-content > form > table {
+	 display: none;
+ }
+ 
+ .popup-content > form > table.open {
+	 display: flex;
+ }
+
+
+.popup-overlay {
+	display: none;
+	background-color: black;
+	opacity: 0.5;
+	height: 100vh;
+	width: 100vw;
+	position: fixed;
+	top: 0;
+	left: 0;
+}
+
+.popup-container {
+	display: none;
+	height: 100vh;
+	width: 100vw;
+	position: fixed;
+	top: 0;
+	left: 0;
+	justify-content: center;
+    align-items: center;
+}
+
+.popup-overlay.open {
+	display: block;
+}
+
+.popup-container.open {
+	display: flex;
+}
+
+.popup {
+	background-color:white;
+	border-radius: 32px;
+	overflow: hidden;
+}
+
+.popup-header {
+	background-color: #2E86C1;
+	color: white;
+	font-size: 18px;
+	padding: 10px;
+	display: flex;
+	justify-content: center;
+	
+}
+
+.popup-content{
+	/* width:100%;
+	height:100%; */
+	padding: 15px 20px 30px 20px;
+}
+
+.popup-content > form > table > thead > tr > th {
+	text-align: center;
+    width: 100%;
+} 
+
+.popup-content > form > table > tbody > tr > td {
+	padding: 10px;
+	text-align: left;
+	font-size: 20px;
+}
+
+
+ /* ================  Menu à gauche ================ */ 
+ 
+ 
+.gauche {
+    
+    background: #CCCCCC;
+    grid-column: 1;
+    grid-row: 2;
+    padding: 0;
+}
+
+.gauche > ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.gauche > ul > li,
+.gauche > ul > li > a {
+    transition: 0.25s ease-in-out all;
+}
+
+.gauche > ul > li > a {
+    display: block;
+    color: initial;
+    padding: 10px;
+    text-decoration: none;
+    /* transition: 0.25s ease-in-out color; */
+}
+
+.gauche > ul > li:hover {
+    background: #AD2317;
+}
+
+.gauche > ul > li:hover > a {
+    color: white;
+}
+
+.gauche > ul > li > a:active {
+    color: #cc6300
+}
+
+.gauche > ul > li.active {
+    background: #333;
+}
+
+.gauche > ul > li.active > a {
+    color: white;
+}
