--- a/HTML/assets/css/jeu.css
+++ b/HTML/assets/css/jeu.css
@@ -121,11 +121,16 @@ body{
     border: solid 1px black;
 }
 
-@media screen and (max-width : 600px){
-    
-}
-
 img {
     max-width: 100%;
     max-height: 100%;
 }
+
+.rotation{
+    transform: scaleY(-1);
+}
+
+@media screen and (max-width : 600px){
+    
+}
+
