--- a/HTML/assets/css/jeu.css
+++ b/HTML/assets/css/jeu.css
@@ -37,6 +37,11 @@ body{
     background: blue;
 }
 
+.grilleCentraleNomChrono div{
+    text-align: right;
+    border: solid 1px black;
+}
+
 .grilleCentralePlateauEtBoutons .grilleCentral5Verti .piecesCapturees {
     width : 100%;
     height: 30px;
@@ -77,20 +82,33 @@ body{
     grid-template-rows: repeat(8, 50px);
     text-align : center;
 }
+
 .grillePlateauPrincipal div{
     background: white;
     
     border: solid 1px black;
     box-sizing: border-box;
 }
-.grillePlateauPrincipal div:nth-child(-2n+8),
-.grillePlateauPrincipal div:nth-child(8) ~ div:nth-child(-2n+15),
-.grillePlateauPrincipal div:nth-child(16) ~ div:nth-child(-2n+24),
-.grillePlateauPrincipal div:nth-child(24) ~ div:nth-child(-2n+31),
-.grillePlateauPrincipal div:nth-child(32) ~ div:nth-child(-2n+40),
-.grillePlateauPrincipal div:nth-child(40) ~ div:nth-child(-2n+47),
-.grillePlateauPrincipal div:nth-child(48) ~ div:nth-child(-2n+56),
-.grillePlateauPrincipal div:nth-child(56) ~ div:nth-child(-2n+63)
+.noir div:nth-child(-2n+7),
+.noir div:nth-child(9) ~ div:nth-child(-2n+16),
+.noir div:nth-child(15) ~ div:nth-child(-2n+23),
+.noir div:nth-child(25) ~ div:nth-child(-2n+32),
+.noir div:nth-child(31) ~ div:nth-child(-2n+39),
+.noir div:nth-child(41) ~ div:nth-child(-2n+48),
+.noir div:nth-child(47) ~ div:nth-child(-2n+55),
+.noir div:nth-child(57) ~ div:nth-child(-2n+64)
+{
+    background: rgb(71, 71, 71);
+}
+
+.blanc div:nth-child(-2n+8),
+.blanc div:nth-child(8) ~ div:nth-child(-2n+15),
+.blanc div:nth-child(16) ~ div:nth-child(-2n+24),
+.blanc div:nth-child(24) ~ div:nth-child(-2n+31),
+.blanc div:nth-child(32) ~ div:nth-child(-2n+40),
+.blanc div:nth-child(40) ~ div:nth-child(-2n+47),
+.blanc div:nth-child(48) ~ div:nth-child(-2n+56),
+.blanc div:nth-child(56) ~ div:nth-child(-2n+63)
 {
     background: rgb(71, 71, 71);
 }
@@ -115,6 +133,9 @@ body{
     flex-direction: column;
     justify-content: center;  
 }
+.flexAbandonnerNul button{
+    margin:5px;
+}
 
 .divHistoriqueEtChat {
     height: 50%;
@@ -126,8 +147,19 @@ img {
     max-height: 100%;
 }
 
-.rotation{
+.rotationY{
     transform: scaleY(-1);
+}
+.rotationY div{
+    transform: scaleY(-1);
+}
+
+.rotationX{
+    transform : scaleX(-1);
+}
+
+.rotationX div{
+    transform: scaleX(-1);;
 }
 
 @media screen and (max-width : 600px){
