--- a/HTML/assets/css/jeu.css
+++ b/HTML/assets/css/jeu.css
@@ -1,24 +1,8 @@
-body{
-    background	: rgb(202, 202, 204);
-    display: flex;
-}
-
-.gauche{
-    float: left;
-    width:25%;
- }
-
- .grilleCentralePlateauEtBoutons{
-    width:50%;
+ .milieu{
     display:flex;
 }
 
- .droite{
-    float: right;
-    width:25%;
- }
-
- .grilleCentralePlateauEtBoutons .grilleCentral5Verti{
+.grilleCentral5Verti{
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -27,7 +11,7 @@ body{
     box-sizing: border-box;
 }
  
-.grilleCentralePlateauEtBoutons .grilleCentral5Verti .grilleCentraleNomChrono{
+.grilleCentral5Verti .grilleCentraleNomChrono{
     width : 100%;
     height: 30px;
     display:grid;
@@ -42,7 +26,7 @@ body{
     border: solid 1px black;
 }
 
-.grilleCentralePlateauEtBoutons .grilleCentral5Verti .piecesCapturees {
+.grilleCentral5Verti .piecesCapturees {
     width : 100%;
     height: 30px;
     border: solid 1px black;
@@ -59,21 +43,6 @@ body{
     margin-bottom: 5px;
 }
 
-.grillePlateau1a8 {  
-    grid-row: 1;
-    grid-column: 1;
-    display: grid;
-    grid-template-columns: repeat(1, 50px); 
-    grid-template-rows: repeat(8, 50px);
-    text-align: center;
-}
-.grillePlateau1a8 div{
-    height: 50px;
-    line-height: 50px;
-    border: solid 1px black;
-    box-sizing: border-box;
-}
-
 .grillePlateauPrincipal {
     display: grid; 
     grid-row: 1;
@@ -85,10 +54,10 @@ body{
 
 .grillePlateauPrincipal div{
     background: white;
-    
     border: solid 1px black;
     box-sizing: border-box;
 }
+
 .noir div:nth-child(-2n+7),
 .noir div:nth-child(9) ~ div:nth-child(-2n+16),
 .noir div:nth-child(15) ~ div:nth-child(-2n+23),
@@ -113,13 +82,32 @@ body{
     background: rgb(71, 71, 71);
 }
 
+.grille8{
+    display: grid;
+    text-align: center;
+    background: grey;
+}
+
+.grillePlateau1a8 {  
+    grid-row: 1;
+    grid-column: 1;
+    grid-template-columns: repeat(1, 50px); 
+    grid-template-rows: repeat(8, 50px);
+}
+
+.grillePlateau1a8 div{
+    height: 50px;
+    line-height: 50px;
+    border: solid 1px black;
+    box-sizing: border-box;
+}
+
 .grillePlateauAaH {
     grid-row: 2;
     grid-column: 2;
-    display: grid;
-    grid-template-columns: repeat(8, 50px); 
-    text-align: center;
+    grid-template-columns: repeat(8, 50px);
 }
+
 .grillePlateauAaH div{
     height: 50px;
     line-height: 50px;
@@ -133,9 +121,11 @@ body{
     flex-direction: column;
     justify-content: center;  
 }
+
 .flexAbandonnerNul button{
     margin:5px;
 }
+
 .caché {
     visibility : collapse;
 }
@@ -145,11 +135,10 @@ body{
     border: solid 1px black;
 }
 
-.divHistoriqueEtChat table{
+.historiqueCoups{
     width : 100%;
     text-align: center;
 }
-
 
 .chat{
     display: grid;
@@ -174,6 +163,7 @@ img {
 .rotationY{
     transform: scaleY(-1);
 }
+
 .rotationY div{
     transform: scaleY(-1);
 }
