--- a/HTML/assets/css/jeu.css
+++ b/HTML/assets/css/jeu.css
@@ -6,9 +6,8 @@
     display:flex;
     flex-direction: row;
     flex-wrap: wrap;
-    width: 80%;
-    border: solid 1px black;
     box-sizing: border-box;
+    margin : 15px
 }
  
 .grilleCentral5Verti .grilleCentraleNomChrono{
@@ -22,7 +21,6 @@
 }
 
 .grilleCentraleNomChrono div{
-    text-align: right;
     border: solid 1px black;
 }
 
@@ -116,14 +114,11 @@
 }
 
 .flexAbandonnerNul {
+    width : 15%;
+    padding : 5px;
     display: flex;
-    width : auto;
     flex-direction: column;
-    justify-content: center;  
-}
-
-.flexAbandonnerNul button{
-    margin:5px;
+    justify-content: center;
 }
 
 .caché {
