--- a/HTML/assets/css/accueil.css
+++ b/HTML/assets/css/accueil.css
@@ -64,3 +64,10 @@ div.droite table {
 	color: black;
 	text-decoration: none;
 }
+.droite{
+	margin-top: 30%;
+}
+
+.milieu h2, div.milieu > h2 ~p{
+	color: white;
+}
