--- a/HTML/assets/css/testcharte.css
+++ b/HTML/assets/css/testcharte.css
@@ -74,7 +74,7 @@ footer {
 .tab-standard tr:nth-child(even) {
     background-color: rgb(158, 158, 158);
 
-
+}
 .grosBouton {
 	box-shadow: 0 0 0 1px black;
 	border: 1px solid #ccc;
@@ -150,6 +150,54 @@ nav>ul>li.active {
 nav>ul>li.active>a {
 	color: white;
 }
+
+
+.petitBouton{
+	box-shadow: 0 0 0 1px black;
+	border: 1px solid #ccc;
+	border-radius: 32px;
+	text-align: center;
+	font-size: 20px;
+	font-weight: bold;
+	padding: 5px 10px 5px 10px;
+	margin: 15px;
+	background-color: #ffffffd3;
+	color: rgb(0, 0, 0);
+}
+
+
+.petitBouton:hover {
+	box-shadow: 0 0 9px #d85000;
+	border: 1px solid #d85000;
+}
+.input:hover {
+	box-shadow: 0 0 9px #d85000;
+	border: 1px solid #d85000;
+}
+
+
+select{
+	box-shadow: 0 0 0 1px black;
+	border: 1px solid #ccc;
+	border-radius: 32px;
+	text-align: center;
+	font-size: 14px;
+	padding: 5px 10px 5px 10px;
+	margin: 15px;
+	background-color: #ffffffd3;
+	color: rgb(0, 0, 0);
+}
+ input{
+	box-shadow: 0 0 0 1px black;
+	border: 1px solid #ccc;
+	border-radius: 32px;
+	text-align: center;
+	font-size: 14px;
+	padding: 5px 10px 5px 10px;
+	margin: 15px;
+	background-color: #ffffffd3;
+	color: rgb(0, 0, 0);
+ }
 
 
 
