--- a/HTML/assets/css/jeu.css
+++ b/HTML/assets/css/jeu.css
@@ -27,10 +27,21 @@
 .grilleCentral5Verti .piecesCapturees {
     width : 100%;
     height: 30px;
+    padding: 0 5px 0 5px;
     border: solid 1px black;
     box-sizing: border-box;
     background: yellow;
+    display: flex;
+    flex-direction: row;
+
+    position: left;
+    text-align: left;
 }
+
+.piecesCapturees > p {
+    box-sizing: border-box;
+}
+
 
 .grillePlateau {
     display: grid;
