--- a/AngularProjetEchec/src/app/projet/component/inscription/inscription.component.html
+++ b/AngularProjetEchec/src/app/projet/component/inscription/inscription.component.html
@@ -1,1 +1,69 @@
-<p>inscription works!</p>
+<section>
+  <fieldset>
+    <div>
+      <h2 style="text-align: center">Inscription</h2>
+
+      <table>
+        <tr>
+          <td><label>Identifiant : </label></td>
+          <td>
+            <input
+              type="text"
+              id="ident"
+              placeholder="Entrez votre identifiant"
+            />
+          </td>
+        </tr>
+        <tr>
+          <td><label>Mot de passe : </label></td>
+          <td>
+            <input
+              type="password"
+              id="mdp"
+              placeholder="Entrez votre mot de passe"
+            />
+          </td>
+        </tr>
+        <tr>
+          <td><label>Confirmation du mot de passe : </label></td>
+          <td>
+            <input
+              type="password"
+              id="confirmmdp"
+              placeholder="Confirmer votre mot de passe"
+            />
+          </td>
+        </tr>
+        <tr>
+          <td><label>Pseudo : </label></td>
+          <td>
+            <input type="text" id="pseudo" placeholder="Entrez votre pseudo" />
+          </td>
+        </tr>
+        <tr>
+          <td><label>Nom : </label></td>
+          <td><input type="text" id="nom" placeholder="Entrez votre nom" /></td>
+        </tr>
+        <tr>
+          <td><label>Prénom : </label></td>
+          <td>
+            <input type="text" id="prenom" placeholder="Entrez votre prénom" />
+          </td>
+        </tr>
+        <tr>
+          <td><label>Email : </label></td>
+          <td>
+            <input type="email" id="mail" placeholder="Entrez votre email" />
+          </td>
+        </tr>
+        <tr>
+          <td><label>Etes vous coach ? </label></td>
+          <td><input type="checkbox" id="coach" /></td>
+        </tr>
+      </table>
+    </div>
+    <div style="text-align: center">
+      <button class="inscription petitBouton">S'inscrire</button>
+    </div>
+  </fieldset>
+</section>
