--- a/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.html
+++ b/AngularProjetEchec/src/app/projet/component/jeu/jeu.component.html
@@ -1,1 +1,28 @@
-
+<div class="grilleCentral5Verti">
+  <div class="grilleCentraleNomChrono">
+    <div>Nom adversaire</div>
+    <div id="h2"></div>
+  </div>
+  <div class="piecesCapturees" nom="piecesCaptureesHaut">
+    <p>Pieces capturées</p>
+  </div>
+  <div class="grillePlateau">
+    <div class="grille8 grillePlateau1a8"></div>
+    <div class="grillePlateauPrincipal"></div>
+    <div></div>
+    <div class="grille8 grillePlateauAaH"></div>
+  </div>
+  <div class="grilleCentraleNomChrono">
+    <div>Mon nom</div>
+    <div id="h1"></div>
+  </div>
+  <div class="piecesCapturees" nom="piecesCaptureesBas">
+    <p>Pieces capturées</p>
+  </div>
+</div>
+<div class="flexAbandonnerNul">
+  <button>Abandonner</button>
+  <button class="btnNul">Nul</button>
+  <button name="reculer">-</button>
+  <button name="avancer">+</button>
+</div>
