--- a/AngularProjetEchec/src/app/projet/component/deconnexion/deconnexion.component.html
+++ b/AngularProjetEchec/src/app/projet/component/deconnexion/deconnexion.component.html
@@ -1,3 +1,3 @@
-<button button class="btn btn-danger" (click)="disconect()">
+<button button class="btn btn-danger" (click)="disconnect()">
   Se deconnecter
 </button>
