--- a/AngularProjetEchec/src/app/projet/component/historique/historique.component.html
+++ b/AngularProjetEchec/src/app/projet/component/historique/historique.component.html
@@ -1,1 +1,25 @@
-<p>historique works!</p>
+<div class="milieu">
+  <div>
+
+      <h1>Utilisateur</h1>
+      <p>Elo : </p>
+  </div>
+
+
+  <table>
+      <thead>
+          <tr>
+              <td>Utilisateur</td>
+              <td>Adversaire</td>
+              <td>Type de partie</td>
+              <td>Resultat</td>
+              <td>Date</td>
+          </tr>
+      </thead>
+      <tbody>
+          <tr>
+
+          </tr>
+      </tbody>
+  </table>
+</div>
