--- a/AngularProjetEchec/src/app/projet/component/statistiques/statistiques.component.html
+++ b/AngularProjetEchec/src/app/projet/component/statistiques/statistiques.component.html
@@ -1,1 +1,71 @@
-<p>statistiques works!</p>
+<div class="milieu">
+        <h1>Mes statistiques</h1>
+        <table class="statsgenerales">
+            <thead>
+                <tr>
+                    <td>Victoires</td>
+                    <td>Défaites</td>
+                    <td>Matchs nul</td>
+                    <td>% de victoires</td>
+                    <td>% de défaites</td>
+                    <td>% de nul</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>100</td>
+                    <td>100</td>
+                    <td>100</td>
+                    <td>33%</td>
+                    <td>33%</td>
+                    <td>33%</td>
+                </tr>
+            </tbody>
+        </table>
+<br/>
+        <table class="statsblanc">
+            <thead>
+                <tr>
+                    <td>Victoires avec blanc</td>
+                    <td>Défaites avec blanc</td>
+                    <td>Matchs nul avec blanc</td>
+                    <td>% de victoires avec blanc</td>
+                    <td>% de défaites avec blanc</td>
+                    <td>% de nul avec blanc</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>100</td>
+                    <td>100</td>
+                    <td>100</td>
+                    <td>33%</td>
+                    <td>33%</td>
+                    <td>33%</td>
+                </tr>
+            </tbody>
+        </table>
+        <br/>
+        <table class="statsnoir">
+            <thead>
+                <tr>
+                    <td>Victoires avec noir</td>
+                    <td>Défaites avec noir</td>
+                    <td>Matchs nul avec noir</td>
+                    <td>% de victoires avec noir</td>
+                    <td>% de défaites avec noir</td>
+                    <td>% de nul avec noir</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>100</td>
+                    <td>100</td>
+                    <td>100</td>
+                    <td>33%</td>
+                    <td>33%</td>
+                    <td>33%</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
