--- a/AngularProjetEchec/src/app/projet/component/probleme/probleme.component.html
+++ b/AngularProjetEchec/src/app/projet/component/probleme/probleme.component.html
@@ -1,1 +1,64 @@
-<p>probleme works!</p>
+<div class="milieu">
+
+  <section class="affichage">
+
+    <div class="affichage-header">
+      <h1>Liste des problèmes</h1>
+    </div>
+
+    <div class="filtre-box">
+
+      <div class="filtre-nb-pb">
+        Montrer
+        <select name="nb-pb">
+          <option value = "10" selected>10</option>
+          <option value = "50">50</option>
+          <option value = "100">100</option>
+        </select>
+        Problèmes
+      </div>
+
+      <div class="filtre-difficulte">
+        Niveau de difficulté
+        <select name="difficulte">
+          <option value = "tous" selected>Tous</option>
+          <option value = "facile">Facile</option>
+          <option value = "moyen">Moyen</option>
+          <option value = "moyen">Difficile</option>
+        </select>
+      </div>
+
+      <div class="filtre-resolution">
+        Problème résolu
+        <select name="resolution">
+          <option value = "tous" selected>Tous</option>
+          <option value = "oui">OUI</option>
+          <option value = "non">NON</option>
+        </select>
+      </div>
+
+    </div>
+
+    <div class="affichage-content">
+      <table class="tableau-problemes tab-standard">
+        <thead>
+          <tr>
+            <th class="num-pb">Numéro du problème</th>
+            <th class="apercu-pb">Aperçu</th>
+            <th class="difficulte-pb">Difficulté</th>
+            <th class="resultat-pb">Résolu ?</th>
+          </tr>
+        </thead>
+
+        <tbody>
+
+        </tbody>
+
+      </table>
+    </div>
+
+
+
+  </section>
+
+</div>
